@@ -1,3 +1,12 @@
+2005-01-21  Shaun McCance  <shaunm@gnome.org>
+
+	* data/ui/yelp.glade:
+	* src/yelp-bookmarks.c:
+	- More bookmark love from Don Scorgie
+
+	* src/yelp-xslt-pager.c:
+	- Fixed a typo in a string
+
 2005-01-20  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-gecko-utils.cpp:
